kuber-mon/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: prometheus
    namespace: kuber-mon
    annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port:   '9090'

spec:
    selector:
        app: prometheus
    ports:
    - port: 8080
      targetPort: 9090
